@@ -18,13 +18,14 @@
 package alfio.controller.api.admin;
 
 import alfio.controller.api.support.PageAndContent;
-import alfio.manager.user.UserManager;
-import alfio.model.Event;
-import alfio.model.ExtensionLog;
-import alfio.model.ExtensionSupport;
-import alfio.model.ExtensionSupport.*;
 import alfio.extension.Extension;
 import alfio.extension.ExtensionService;
+import alfio.manager.user.UserManager;
+import alfio.model.EventAndOrganizationId;
+import alfio.model.ExtensionLog;
+import alfio.model.ExtensionSupport;
+import alfio.model.ExtensionSupport.ExtensionMetadataValue;
+import alfio.model.ExtensionSupport.ExtensionParameterMetadataAndValue;
 import alfio.model.user.Organization;
 import alfio.model.user.User;
 import alfio.repository.EventRepository;
@@ -41,11 +42,12 @@ import org.springframework.web.bind.annotation.*;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.security.Principal;
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @RestController
@@ -71,23 +73,23 @@ public class ExtensionApiController {
     private final EventRepository eventRepository;
 
 
-    @RequestMapping(value = "", method = RequestMethod.GET)
+    @GetMapping("")
     public List<ExtensionSupport> listAll(Principal principal) {
         ensureAdmin(principal);
         return extensionService.listAll();
     }
 
-    @RequestMapping(value = "/sample", method = RequestMethod.GET)
+    @GetMapping("/sample")
     public ExtensionSupport getSample() {
-        return new ExtensionSupport("-", "", null, true, true, SAMPLE_JS);
+        return new ExtensionSupport(null, "-", "", null, true, true, SAMPLE_JS);
     }
 
-    @RequestMapping(value = "", method = RequestMethod.POST)
+    @PostMapping(value = "")
     public ResponseEntity<SerializablePair<Boolean, String>> create(@RequestBody Extension script, Principal principal) {
         return createOrUpdate(null, null, script, principal);
     }
 
-    @RequestMapping(value = "{path}/{name}", method = RequestMethod.POST)
+    @PostMapping(value = "{path}/{name}")
     public ResponseEntity<SerializablePair<Boolean, String>> update(@PathVariable("path") String path, @PathVariable("name") String name, @RequestBody Extension script, Principal principal) {
         return createOrUpdate(path, name, script, principal);
     }
@@ -98,24 +100,25 @@ public class ExtensionApiController {
             extensionService.createOrUpdate(previousPath, previousName, script);
             return ResponseEntity.ok(SerializablePair.of(true, null));
         } catch (Throwable t) {
+            log.error("unexpected exception", t);
             return ResponseEntity.badRequest().body(SerializablePair.of(false, t.getMessage()));
         }
     }
 
-    @RequestMapping(value = "{path}/{name}", method = RequestMethod.GET)
-    public ResponseEntity<ExtensionSupport> loadSingle(@PathVariable("path") String path, @PathVariable("name") String name, Principal principal) throws UnsupportedEncodingException {
+    @GetMapping("{path}/{name}")
+    public ResponseEntity<ExtensionSupport> loadSingle(@PathVariable("path") String path, @PathVariable("name") String name, Principal principal) {
         ensureAdmin(principal);
-        return extensionService.getSingle(URLDecoder.decode(path, "UTF-8"), name).map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.notFound().build());
+        return extensionService.getSingle(URLDecoder.decode(path, StandardCharsets.UTF_8), name).map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.notFound().build());
     }
 
 
-    @RequestMapping(value = "{path}/{name}", method = RequestMethod.DELETE)
+    @DeleteMapping(value = "{path}/{name}")
     public void delete(@PathVariable("path") String path, @PathVariable("name") String name, Principal principal) {
         ensureAdmin(principal);
         extensionService.delete(path, name);
     }
 
-    @RequestMapping(value = "/{path}/{name}/toggle/{enable}", method = RequestMethod.POST)
+    @PostMapping(value = "/{path}/{name}/toggle/{enable}")
     public void toggle(@PathVariable("path") String path, @PathVariable("name") String name, @PathVariable("enable") boolean enable, Principal principal) {
         ensureAdmin(principal);
         extensionService.toggle(path, name, enable);
@@ -123,7 +126,7 @@ public class ExtensionApiController {
 
 
     //
-    @RequestMapping(value = "/setting/system", method = RequestMethod.GET)
+    @GetMapping("/setting/system")
     public Map<Integer, List<ExtensionParameterMetadataAndValue>> getParametersFor(Principal principal) {
         ensureAdmin(principal);
         return extensionService.getConfigurationParametersFor("-", "-%", "SYSTEM")
@@ -143,62 +146,66 @@ public class ExtensionApiController {
         extensionService.deleteSettingValue(id, "-");
     }
 
-    @RequestMapping(value = "/setting/organization/{orgShortName}", method = RequestMethod.GET)
-    public Map<Integer, List<ExtensionParameterMetadataAndValue>> getParametersFor(@PathVariable("orgShortName") String orgShortName, Principal principal) {
-        Organization org = organizationRepository.findByName(orgShortName).orElseThrow(IllegalStateException::new);
+    @GetMapping("/setting/organization/{orgId}")
+    public Map<Integer, List<ExtensionParameterMetadataAndValue>> getParametersFor(@PathVariable("orgId") int orgId, Principal principal) {
+        Organization org = organizationRepository.getById(orgId);
         ensureOrganization(principal, org);
         return extensionService.getConfigurationParametersFor("-" + org.getId(), "-" + org.getId()+"-%", "ORGANIZATION")
             .stream().collect(Collectors.groupingBy(ExtensionParameterMetadataAndValue::getExtensionId));
     }
 
-    @PostMapping("/setting/organization/{orgShortName}/bulk-update")
-    public void bulkUpdateOrganization(@PathVariable("orgShortName") String orgShortName, @RequestBody List<ExtensionMetadataValue> toUpdate, Principal principal) {
-        Organization org = organizationRepository.findByName(orgShortName).orElseThrow(IllegalStateException::new);
+    @PostMapping("/setting/organization/{orgId}/bulk-update")
+    public void bulkUpdateOrganization(@PathVariable("orgId") int orgId, @RequestBody List<ExtensionMetadataValue> toUpdate, Principal principal) {
+        Organization org = organizationRepository.getById(orgId);
         ensureOrganization(principal, org);
         ensureIdsArePresent(toUpdate, extensionService.getConfigurationParametersFor("-" + org.getId(), "-" + org.getId()+"-%", "ORGANIZATION"));
         extensionService.bulkUpdateOrganizationSettings(org, toUpdate);
     }
 
-    @DeleteMapping("/setting/organization/{orgShortName}/{id}")
-    public void deleteOrganizationSettingValue(@PathVariable("orgShortName") String orgShortName, @PathVariable("id") int id, Principal principal) {
-        Organization org = organizationRepository.findByName(orgShortName).orElseThrow(IllegalStateException::new);
+    @DeleteMapping("/setting/organization/{orgId}/{id}")
+    public void deleteOrganizationSettingValue(@PathVariable("orgId") int orgId, @PathVariable("id") int id, Principal principal) {
+        Organization org = organizationRepository.getById(orgId);
         ensureOrganization(principal, org);
         extensionService.deleteSettingValue(id, "-" + org.getId());
     }
 
-    @RequestMapping(value = "/setting/organization/{orgShortName}/event/{shortName}", method = RequestMethod.GET)
-    public Map<Integer, List<ExtensionParameterMetadataAndValue>> getParametersFor(@PathVariable("orgShortName") String orgShortName,
+    @GetMapping("/setting/organization/{orgId}/event/{shortName}")
+    public Map<Integer, List<ExtensionParameterMetadataAndValue>> getParametersFor(@PathVariable("orgId") int orgId,
                                                                      @PathVariable("shortName") String eventShortName,
                                                                      Principal principal) {
 
-        Organization org = organizationRepository.findByName(orgShortName).orElseThrow(IllegalStateException::new);
+        Organization org = organizationRepository.getById(orgId);
         ensureOrganization(principal, org);
-        Event event = eventRepository.findByShortName(eventShortName);
+        var event = eventRepository.findOptionalEventAndOrganizationIdByShortName(eventShortName).orElseThrow(IllegalStateException::new);
         ensureEventInOrganization(org, event);
-        String pattern = String.format("-%d-%d", org.getId(), event.getId());
+        String pattern = generatePatternFrom(event);
         return extensionService.getConfigurationParametersFor(pattern, pattern,"EVENT")
             .stream().collect(Collectors.groupingBy(ExtensionParameterMetadataAndValue::getExtensionId));
     }
 
-    @PostMapping("/setting/organization/{orgShortName}/event/{shortName}/bulk-update")
-    public void bulkUpdateEvent(@PathVariable("orgShortName") String orgShortName, @PathVariable("shortName") String eventShortName,
+    @PostMapping("/setting/organization/{orgId}/event/{shortName}/bulk-update")
+    public void bulkUpdateEvent(@PathVariable("orgId") int orgId, @PathVariable("shortName") String eventShortName,
                                 @RequestBody List<ExtensionMetadataValue> toUpdate, Principal principal) {
-        Organization org = organizationRepository.findByName(orgShortName).orElseThrow(IllegalStateException::new);
+        Organization org = organizationRepository.getById(orgId);
         ensureOrganization(principal, org);
-        Event event = eventRepository.findByShortName(eventShortName);
+        var event = eventRepository.findOptionalEventAndOrganizationIdByShortName(eventShortName).orElseThrow(IllegalStateException::new);
         ensureEventInOrganization(org, event);
-        String pattern = String.format("-%d-%d", org.getId(), event.getId());
+        String pattern = generatePatternFrom(event);
         ensureIdsArePresent(toUpdate, extensionService.getConfigurationParametersFor(pattern, pattern, "EVENT"));
         extensionService.bulkUpdateEventSettings(org, event, toUpdate);
     }
 
-    @DeleteMapping("/setting/organization/{orgShortName}/event/{shortName}/{id}")
-    public void deleteEventSettingValue(@PathVariable("orgShortName") String orgShortName, @PathVariable("shortName") String eventShortName, @PathVariable("id") int id, Principal principal) {
-        Organization org = organizationRepository.findByName(orgShortName).orElseThrow(IllegalStateException::new);
+    @DeleteMapping("/setting/organization/{orgId}/event/{shortName}/{id}")
+    public void deleteEventSettingValue(@PathVariable("orgId") int orgId, @PathVariable("shortName") String eventShortName, @PathVariable("id") int id, Principal principal) {
+        Organization org = organizationRepository.getById(orgId);
         ensureOrganization(principal, org);
-        Event event = eventRepository.findByShortName(eventShortName);
+        var event = eventRepository.findOptionalEventAndOrganizationIdByShortName(eventShortName).orElseThrow(IllegalStateException::new);
         ensureEventInOrganization(org, event);
-        extensionService.deleteSettingValue(id, String.format("-%d-%d", org.getId(), event.getId()));
+        extensionService.deleteSettingValue(id, generatePatternFrom(event));
+    }
+
+    private static String generatePatternFrom(EventAndOrganizationId event) {
+        return String.format("-%d-%d", event.getOrganizationId(), event.getId());
     }
 
     //check that the ids are coherent
@@ -212,7 +219,7 @@ public class ExtensionApiController {
 
     //
 
-    @RequestMapping(value = "/log")
+    @GetMapping("/log")
     public PageAndContent<List<ExtensionLog>> getLog(@RequestParam(required = false, name = "path") String path,
                                                      @RequestParam(required = false, name = "name") String name,
                                                      @RequestParam(required = false, name = "type") ExtensionLog.Type type,
@@ -232,7 +239,7 @@ public class ExtensionApiController {
         Validate.isTrue(userManager.isOwnerOfOrganization(user, organization.getId()));
     }
 
-    private static void ensureEventInOrganization(Organization organization, Event event) {
+    private static void ensureEventInOrganization(Organization organization, EventAndOrganizationId event) {
         Validate.isTrue(organization.getId() == event.getOrganizationId());
     }
 }
